tests/type-errors/cmp_tez_nat.arl
archetype cmp_tez_nat

variable b : bool = false

entry exec () {
  b := transferred = 0
}
